--- a/Casanova/Casanova/Base.lproj/Main.storyboard
+++ b/Casanova/Casanova/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Casanova" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,132 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="imH-CN-zYf">
+                                <rect key="frame" x="36" y="57" width="303" height="31"/>
+                                <connections>
+                                    <action selector="sliderValueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="g9f-2v-9l2"/>
+                                </connections>
+                            </slider>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Q1x-uU-usi">
+                                <rect key="frame" x="0.0" y="200" width="375" height="467"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CommentTableViewCell" textLabel="WSI-Fp-EgZ" detailTextLabel="s4N-fi-l72" style="IBUITableViewCellStyleValue1" id="G6c-TD-NN3" customClass="CommentTableViewCell" customModule="Casanova" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="G6c-TD-NN3" id="sr5-U3-4bx">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="WSI-Fp-EgZ">
+                                                    <rect key="frame" x="15" y="12" width="33.5" height="20.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="s4N-fi-l72">
+                                                    <rect key="frame" x="316" y="12" width="44" height="20.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G2k-HW-nuT">
+                                <rect key="frame" x="38" y="95" width="34" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="AXX-HM-fCT"/>
+                                </constraints>
+                                <state key="normal" title="Start"/>
+                                <connections>
+                                    <action selector="startButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="jPC-Df-Sou"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2sc-5d-Ct6">
+                                <rect key="frame" x="305" y="95" width="32" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="6wO-Es-2re"/>
+                                </constraints>
+                                <state key="normal" title="Stop"/>
+                                <connections>
+                                    <action selector="stopButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="sKy-iL-8it"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="comment" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0cJ-Uq-eEO">
+                                <rect key="frame" x="0.0" y="144" width="280" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="280" id="cch-80-7Rn"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="30E-Zb-Bhj">
+                                <rect key="frame" x="298" y="144" width="77" height="30"/>
+                                <state key="normal" title="Post"/>
+                                <connections>
+                                    <action selector="postCommentBtnDidClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="jgI-L0-tWx"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WuZ-cy-qYe">
+                                <rect key="frame" x="38" y="28" width="299" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jzm-aB-Clu">
+                                <rect key="frame" x="122" y="95" width="133" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="8P7-T7-4o2"/>
+                                </constraints>
+                                <state key="normal" title="Pause"/>
+                                <connections>
+                                    <action selector="pauseButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XKh-EQ-i5m"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="30E-Zb-Bhj" firstAttribute="leading" secondItem="0cJ-Uq-eEO" secondAttribute="trailing" constant="18" id="8XI-Uw-dqz"/>
+                            <constraint firstItem="Q1x-uU-usi" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="91m-Pw-eud"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Q1x-uU-usi" secondAttribute="bottom" id="D4T-vJ-thy"/>
+                            <constraint firstItem="G2k-HW-nuT" firstAttribute="leading" secondItem="imH-CN-zYf" secondAttribute="leading" id="L5r-j2-C4m"/>
+                            <constraint firstItem="G2k-HW-nuT" firstAttribute="top" secondItem="imH-CN-zYf" secondAttribute="bottom" constant="8" id="Mgq-Xi-YL0"/>
+                            <constraint firstItem="WuZ-cy-qYe" firstAttribute="trailing" secondItem="imH-CN-zYf" secondAttribute="trailing" id="MrK-AB-2fo"/>
+                            <constraint firstItem="WuZ-cy-qYe" firstAttribute="leading" secondItem="imH-CN-zYf" secondAttribute="leading" id="QhH-us-uYT"/>
+                            <constraint firstItem="2sc-5d-Ct6" firstAttribute="trailing" secondItem="imH-CN-zYf" secondAttribute="trailing" id="QtE-OO-5Tn"/>
+                            <constraint firstItem="0cJ-Uq-eEO" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-16" id="RWt-aK-YnD"/>
+                            <constraint firstItem="30E-Zb-Bhj" firstAttribute="top" secondItem="0cJ-Uq-eEO" secondAttribute="top" id="TeJ-Mj-etr"/>
+                            <constraint firstItem="2sc-5d-Ct6" firstAttribute="leading" secondItem="Jzm-aB-Clu" secondAttribute="trailing" constant="50" id="TrI-NV-IIw"/>
+                            <constraint firstItem="imH-CN-zYf" firstAttribute="top" secondItem="WuZ-cy-qYe" secondAttribute="bottom" constant="8" id="Vrr-99-QXd"/>
+                            <constraint firstAttribute="trailing" secondItem="Q1x-uU-usi" secondAttribute="trailing" id="XDS-sY-RRY"/>
+                            <constraint firstItem="Jzm-aB-Clu" firstAttribute="leading" secondItem="G2k-HW-nuT" secondAttribute="trailing" constant="50" id="bNB-qv-dPW"/>
+                            <constraint firstItem="Q1x-uU-usi" firstAttribute="top" secondItem="0cJ-Uq-eEO" secondAttribute="bottom" constant="26" id="dMb-xj-NPE"/>
+                            <constraint firstItem="imH-CN-zYf" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="e5P-Sb-aVW"/>
+                            <constraint firstItem="imH-CN-zYf" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="22" id="fGP-kz-IcB"/>
+                            <constraint firstItem="Jzm-aB-Clu" firstAttribute="top" secondItem="imH-CN-zYf" secondAttribute="bottom" constant="8" id="kVt-7h-bop"/>
+                            <constraint firstItem="0cJ-Uq-eEO" firstAttribute="top" secondItem="G2k-HW-nuT" secondAttribute="bottom" constant="19" id="oVL-q3-tev"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="30E-Zb-Bhj" secondAttribute="trailing" constant="-16" id="qoD-f3-XdC"/>
+                            <constraint firstItem="WuZ-cy-qYe" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="t8E-pN-9tS"/>
+                            <constraint firstItem="2sc-5d-Ct6" firstAttribute="top" secondItem="imH-CN-zYf" secondAttribute="bottom" constant="8" id="xnm-L3-7hT"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="commentTextField" destination="0cJ-Uq-eEO" id="FCD-Mv-GlD"/>
+                        <outlet property="commentsTableView" destination="Q1x-uU-usi" id="LSP-yI-T7Z"/>
+                        <outlet property="slider" destination="imH-CN-zYf" id="RL1-46-9G5"/>
+                        <outlet property="timeLabel" destination="WuZ-cy-qYe" id="e48-A0-LYt"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
         </scene>
     </scenes>
 </document>
