--- a/Casanova/Casanova/Base.lproj/Main.storyboard
+++ b/Casanova/Casanova/Base.lproj/Main.storyboard
@@ -62,7 +62,7 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a5j-fi-msz" customClass="TagListView" customModule="TagListView">
                                 <rect key="frame" x="0.0" y="64" width="414" height="28"/>
-                                <color key="backgroundColor" red="0.97254901960784312" green="0.98039215686274506" blue="0.9882352941176471" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="enableRemoveButton" value="YES"/>
                                     <userDefinedRuntimeAttribute type="color" keyPath="tagBackgroundColor">
@@ -123,6 +123,7 @@
                     <connections>
                         <outlet property="filterListView" destination="a5j-fi-msz" id="O8W-Qv-maf"/>
                         <outlet property="homeTableView" destination="A0f-Tg-Vfd" id="JGR-jq-dG4"/>
+                        <outlet property="homeTableViewBottomConstraint" destination="g6i-w6-iEc" id="dMv-XJ-WI0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YSU-DI-NZa" userLabel="First Responder" sceneMemberID="firstResponder"/>
