--- a/Casanova/Casanova/TopicHeaderView.xib
+++ b/Casanova/Casanova/TopicHeaderView.xib
@@ -8,6 +8,11 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Montserrat-Light.ttf">
+            <string>Montserrat-Light</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TopicHeaderView" customModule="Casanova" customModuleProvider="target">
             <connections>
@@ -26,48 +31,66 @@
             <rect key="frame" x="0.0" y="0.0" width="488" height="201"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RnQ-BR-wm8">
-                    <rect key="frame" x="14" y="15" width="460" height="66"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RnQ-BR-wm8">
+                    <rect key="frame" x="24" y="7" width="440" height="62.5"/>
                     <string key="text">Do you agree or disagree the statement that we should let children use the computers or other electronic devices as early as they can?</string>
-                    <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="16"/>
-                    <color key="textColor" red="0.2901960784" green="0.2901960784" blue="0.2901960784" alpha="1" colorSpace="calibratedRGB"/>
+                    <fontDescription key="fontDescription" name="Montserrat-Light" family="Montserrat" pointSize="17"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ggY-Pv-14P" customClass="TagListView" customModule="TagListView">
-                    <rect key="frame" x="14" y="86.5" width="460" height="79"/>
+                    <rect key="frame" x="24" y="75" width="440" height="90.5"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="color" keyPath="textColor">
                             <color key="value" red="0.29411764709999999" green="0.80392156859999997" blue="0.92941176469999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         </userDefinedRuntimeAttribute>
                         <userDefinedRuntimeAttribute type="color" keyPath="tagBackgroundColor">
-                            <color key="value" red="0.90980392160000001" green="0.97254901959999995" blue="0.99215686270000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <color key="value" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         </userDefinedRuntimeAttribute>
                         <userDefinedRuntimeAttribute type="color" keyPath="selectedTextColor">
                             <color key="value" cocoaTouchSystemColor="lightTextColor"/>
                         </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                            <real key="value" value="1"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                            <color key="value" red="0.90980392156862744" green="0.97254901960784312" blue="0.99215686274509807" alpha="1" colorSpace="calibratedRGB"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="number" keyPath="paddingY">
+                            <real key="value" value="4"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="number" keyPath="paddingX">
+                            <real key="value" value="6"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="number" keyPath="marginY">
+                            <real key="value" value="4"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="number" keyPath="marginX">
+                            <real key="value" value="4"/>
+                        </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0mK-r5-Koo">
-                    <rect key="frame" x="54" y="175" width="29.5" height="16.5"/>
+                    <rect key="frame" x="64" y="175" width="29.5" height="16.5"/>
                     <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="12"/>
-                    <nil key="textColor"/>
+                    <color key="textColor" red="0.29019607843137252" green="0.29019607843137252" blue="0.29019607843137252" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="# answers" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vbj-wv-L3x">
-                    <rect key="frame" x="93" y="175" width="54" height="16.5"/>
+                    <rect key="frame" x="103" y="175" width="54" height="16.5"/>
                     <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="12"/>
-                    <nil key="textColor"/>
+                    <color key="textColor" red="0.29019607843137252" green="0.29019607843137252" blue="0.29019607843137252" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5AC-Gy-1Uo">
-                    <rect key="frame" x="432" y="175" width="16" height="16"/>
+                    <rect key="frame" x="422" y="175" width="16" height="16"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="16" id="Kri-9z-SH6"/>
                         <constraint firstAttribute="width" constant="16" id="dYI-Qd-p24"/>
                     </constraints>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uPE-n9-04y">
-                    <rect key="frame" x="14" y="175" width="30" height="16"/>
+                    <rect key="frame" x="24" y="175" width="30" height="16"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="30" id="kBD-7R-0mp"/>
@@ -75,7 +98,7 @@
                     </constraints>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="52" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xxk-dW-tRM">
-                    <rect key="frame" x="458" y="174" width="16" height="19.5"/>
+                    <rect key="frame" x="448" y="174" width="16" height="19.5"/>
                     <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="14"/>
                     <color key="textColor" red="0.2901960784" green="0.2901960784" blue="0.2901960784" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
@@ -91,14 +114,14 @@
                 <constraint firstItem="vbj-wv-L3x" firstAttribute="leading" secondItem="0mK-r5-Koo" secondAttribute="trailing" constant="10" id="PJX-7n-MCm"/>
                 <constraint firstItem="0mK-r5-Koo" firstAttribute="leading" secondItem="uPE-n9-04y" secondAttribute="trailing" constant="10" id="TRl-Bh-OS2"/>
                 <constraint firstAttribute="bottom" secondItem="uPE-n9-04y" secondAttribute="bottom" constant="10" id="UcD-4A-Nlg"/>
-                <constraint firstItem="RnQ-BR-wm8" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="14" id="adg-9Q-Btb"/>
+                <constraint firstItem="RnQ-BR-wm8" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="24" id="adg-9Q-Btb"/>
                 <constraint firstItem="vbj-wv-L3x" firstAttribute="centerY" secondItem="0mK-r5-Koo" secondAttribute="centerY" id="b5N-Vn-pAM"/>
                 <constraint firstItem="Xxk-dW-tRM" firstAttribute="leading" secondItem="5AC-Gy-1Uo" secondAttribute="trailing" constant="10" id="bvQ-id-oP4"/>
                 <constraint firstItem="5AC-Gy-1Uo" firstAttribute="centerY" secondItem="vbj-wv-L3x" secondAttribute="centerY" id="fpR-D5-tNc"/>
-                <constraint firstItem="RnQ-BR-wm8" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="15" id="h1P-TM-vzd"/>
+                <constraint firstItem="RnQ-BR-wm8" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="7" id="h1P-TM-vzd"/>
                 <constraint firstItem="ggY-Pv-14P" firstAttribute="top" secondItem="RnQ-BR-wm8" secondAttribute="bottom" constant="5.7000000000000002" id="ifp-AY-7tt"/>
                 <constraint firstItem="uPE-n9-04y" firstAttribute="centerY" secondItem="0mK-r5-Koo" secondAttribute="centerY" id="psM-vx-Hc0"/>
-                <constraint firstAttribute="trailing" secondItem="RnQ-BR-wm8" secondAttribute="trailing" constant="14" id="v6h-wu-ehx"/>
+                <constraint firstAttribute="trailing" secondItem="RnQ-BR-wm8" secondAttribute="trailing" constant="24" id="v6h-wu-ehx"/>
                 <constraint firstItem="uPE-n9-04y" firstAttribute="leading" secondItem="RnQ-BR-wm8" secondAttribute="leading" id="wz2-BZ-jzB"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
